--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,10 +1,6 @@
 ---
 deployment:
   tasks:
-    - npm install
-
-    - ng build --prod
-
-    #- mkdir -p ~/public_html/dev
-
-    - cp -r  project/frontend/dist/* ~/public_html/dev
+    - export DEPLOYPATH=/home/example/public_html/
+    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp style.css $DEPLOYPATH
