--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,10 +1,6 @@
 ---
 deployment:
   tasks:
-    - npm install
-
-    - ng build --prod
-
-    #- mkdir -p ~/public_html/dev
-
-    - cp -r  project/frontend/dist/* ~/public_html/dev
+    - export DEPLOYPATH=~/public_html/dev
+    - cp project/frontend/dist/* $DEPLOYPATH
+    
